--- a/kafka-consumer-elasticsearch/pom.xml
+++ b/kafka-consumer-elasticsearch/pom.xml
@@ -19,8 +19,8 @@
     <dependencies>
         <dependency>
             <groupId>org.elasticsearch.client</groupId>
-            <artifactId>transport</artifactId>
-            <version>7.12.1</version>
+            <artifactId>elasticsearch-rest-high-level-client</artifactId>
+            <version>6.5.4</version>
         </dependency>
 
         <dependency>
@@ -36,11 +36,6 @@
             <version>1.7.25</version>
         </dependency>
 
-        <dependency>
-            <groupId>com.twitter</groupId>
-            <artifactId>hbc-core</artifactId> <!-- or hbc-twitter4j -->
-            <version>2.2.0</version> <!-- or whatever the latest version is -->
-        </dependency>
 
     </dependencies>
 
